[package]
name = "wlptrctl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bincode = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
signal-hook = "0.3"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

[profile.release]
lto = true
strip = true
